--- a/debug/upload_server.html
+++ b/debug/upload_server.html
@@ -6,11 +6,12 @@
 </head>
 <body>
 
-<form action="http://127.0.0.1:2021/transfer" method="POST" enctype="multipart/form-data">
+<form id="image_form" action="http://125.133.86.107:2020/transfer" method="POST" enctype="multipart/form-data">
     Select image to upload:
     <input type="file" name="img" id="fileToUpload">
     <input type="submit" value="Upload Image" name="submit">
 </form>
+
 
 </body>
 </html>
